--- a/angular.json
+++ b/angular.json
@@ -56,6 +56,7 @@
           "defaultConfiguration": "production"
         },
         "serve": {
+          "proxyConfig": "src/proxy.conf.json",
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
